--- a/_data/main.yml
+++ b/_data/main.yml
@@ -30,7 +30,7 @@ read_es: "Sigue leyendo"
 
 twitter: "MSliwinski"
 
-ad: "true" #"true" so it displays, everything else to not show it, like "false"
+ad: "false" #"true" so it displays, everything else to not show it, like "false"
 ad_link: "https://nozbe.com/blog/14-birthday-promo-final-hours/"
 ad_text: "Final hours of 14th birthday 🎂 of Nozbe - GET 4 MONTHS FREE!"
 
