changes in youtube video embed

--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,7 @@ plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-titles-from-headings # Enable H1 to convert to page.title
+  - jekyll-redirect-from # Enable redirection
 
 # Exclude these files from your production _site
 exclude:
