--- a/_data/main.yml
+++ b/_data/main.yml
@@ -146,8 +146,8 @@ tags:
   tit2: "Productivity-related topics. How I hack my life, do things better, faster and most of all, create long-lasting habits. I'm a constant productivity student. Now focused mostly on team productivity with the recent launch of [Nozbe Teams](https://michael.gratis/nozbe){:target='_blank'}."
 - name: podcast
   emoj: "🎧"
-  titl: "The Podcast"
-  tit2: "[The Podcast](https://thepodcast.fm){:target='_blank'} is a podcast I've been recording with Radek, Nozbe's VP of Engineering. After more than 4 years of pretty regular weekly shows, now it's not as regular as we'd like. **[Subscribe](https://podcasts.apple.com/podcast/the-podcast/id1012329770)**"
+  titl: "The Podcast . FM"
+  tit2: "A podcast I've been recording with Radek, Nozbe's VP of Engineering for the last 4+ years about [productivity, business, books, and whatever else comes to mind](/podcast-toc)... about 1-2 episodes per month. **[Subscribe](https://podcasts.apple.com/podcast/the-podcast/id1012329770)**"
 - name: show
   emoj: "📽"
   titl: "Productive! Show"
