--- a/_data/main.yml
+++ b/_data/main.yml
@@ -31,7 +31,7 @@ read_es: "Sigue leyendo"
 twitter: "MSliwinski"
 
 url_podcast: "https://thepodcast.fm/"
-url_podcast_name: "ThePodcast.FM/"
+url_podcast_name: "ThePodcast.FM"
 
 ad: "false" #"true" so it displays, everything else to not show it, like "false"
 ad_link: "https://nozbe.com/blog/14-birthday-promo-final-hours/"
