--- a/_data/main.yml
+++ b/_data/main.yml
@@ -140,7 +140,7 @@ tags:
 - name: now
   emoj: "📝"
   titl: "Now?"
-  tit2: "This is my [“now”](https://nownownow.com/p/Wwy1){:target='_blank'} page inspired by [Derek Sievers](https://sivers.org/now){:target='_blank'}. It answers “what I'm doing now?“. My life, projects and priorities. I post an update monthly."
+  tit2: "This is my **“now”** page inspired by [Derek Sievers](https://sivers.org/now){:target='_blank'}. It answers “what I'm doing now?“. My life, projects and priorities. I post an update monthly."
 - name: office
   emoj: "🏠"
   titl: "Office"
