--- a/_data/main.yml
+++ b/_data/main.yml
@@ -92,7 +92,7 @@ tags:
 - name: business
   emoj: "💼"
   titl: "Business"
-  tit2: "Capitalism, business, money and my struggles as an Internet entrepreneur. No, I don't even own a briefcase."
+  tit2: "Capitalism, business, money and my struggles as an Internet entrepreneur. No, I don't really own a briefcase."
 - name: guest
   emoj: "🤩"
   titl: "Guest appearances"
@@ -125,6 +125,10 @@ tags:
   emoj: "📙"
   titl: "Magazine"
   tit2: "I used to be the editor of the [Productive! Magazine](http://productivemag.com){:target='_blank'} between 2008 and 2016 (34 issues), also in  [Polish](http://productivemag.pl){:target='_blank'} (18 issues), [Dutch](http://productivemag.nl){:target='_blank'} (5 issues), [Spanish](http://productivemag.es){:target='_blank'} (4 issues) and Japanese (1 issue) as a part of my now shut-down [Remag startup](https://remag.me){:target='_blank'}."
+- name: news
+  emoj: "💌"
+  titl: "News"
+  tit2: "Archives of the messages I'm sending to people subscribed to my [Newsletters](/newsletter). I first send the messages to them and I publish them on the blog later."
 - name: nooffice
   emoj: "🏝"
   titl: "NoOffice"
@@ -144,7 +148,7 @@ tags:
 - name: office
   emoj: "🏠"
   titl: "Office"
-  tit2: "My home office and other offices. Check out the yearly evolution of my personal home office - *the room where it happens*."
+  tit2: "The gradual yearly evolution of my personal home office - *the room where it happens*."
 - name: productivity
   emoj: "☑️"
   titl: "Productivity"
@@ -176,7 +180,7 @@ tags:
 - name: wrong
   emoj: "☹️"
   titl: "Wrong"
-  tit2: "Most of my posts about [life](/life/) are very positive. However, sometimes I write when I feel that something is wrong. It's not about complaining but critisizing an issue in constructive way."
+  tit2: "Most of my posts about [life](/life/) are very positive. However, sometimes I write when I feel that something is wrong. It's not about complaining but critisizing an issue in a constructive way."
 - name: webinars
   emoj: "📺"
   titl: "Webinars"
