--- a/_data/main.yml
+++ b/_data/main.yml
@@ -33,7 +33,7 @@ twitter: "MSliwinski"
 url_podcast: "https://thepodcast.fm/"
 url_podcast_name: "ThePodcast.fm"
 
-ad: "true" #"true" so it displays, everything else to not show it, like "false"
+ad: "false" #"true" so it displays, everything else to not show it, like "false"
 ad_link: "https://nozbe.com/blog/summer-promo-extra-months-2021/"
 ad_text: "Only this week - ☀️ Summer offer 4️⃣! Get Nozbe - 4 MONTHS FREE!"
 
