Berlin and travel tag

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -169,6 +169,10 @@ tags:
   emoj: "🎾"
   titl: "Sports"
   tit2: "My struggles as an amateur triathlete and a novice tennis player… and most of all, how I'm trying to stay in shape."
+- name: travel
+  emoj: "✈️"
+  titl: "Travel"
+  tit2: "I love traveling and learning new things from new places and people. I sometimes write a diary of my travels here. Especially when a place or story was particularly memorable."
 - name: video
   emoj: "🎬"
   titl: "Video"
