more import 2015 and computer tag

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -93,6 +93,10 @@ tags:
   emoj: "💼"
   titl: "Business"
   tit2: "Capitalism, business, money and my struggles as an Internet entrepreneur. No, I don't really own a briefcase."
+- name: computers
+  emoj: "💻"
+  titl: "Computers"
+  tit2: "Computing platforms and all the types of computers I used to use like Macs, Windows machines… together with geeky gadgets I happen to test and buy. I also write more specifically on [iPads](/ipadonly), [iPhones](/iphone) and [Apple Watches](/applewatch)."
 - name: guest
   emoj: "🤩"
   titl: "Guest appearances"
