Converting Newsletter to News

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -132,7 +132,7 @@ tags:
 - name: news
   emoj: "💌"
   titl: "News"
-  tit2: "Archives of the messages I'm sending to people subscribed to my [Newsletters](/newsletter). I first send the messages to them and I publish them on the blog later."
+  tit2: "Join my inner circle and as a *thank you* download two of my best-selling books: [It's All About Passion](/passion/) and [No Office Apps](/apps/). Receive regular updates on my writing, especially my progress on the [The No Office book](/nooffice/).\\\\As my newsletter subscriber every month you'll receive 3 things: an actionable productivity tip, an update on my writing with highlights from my [#NoOffice FM podcast](/noofficefm) and the progress report on the [NoOffice book](https://NoOffice.org/){:target='_blank'} and… I might ask you for your feedback! Fill out the form below to join my *inner circle*! See you on the other side!"
 - name: nooffice
   emoj: "🏝"
   titl: "NoOffice"
