--- a/_data/main.yml
+++ b/_data/main.yml
@@ -131,8 +131,8 @@ tags:
   tit2: "I used to be the editor of the [Productive! Magazine](http://productivemag.com){:target='_blank'} between 2008 and 2016 (34 issues), also in  [Polish](http://productivemag.pl){:target='_blank'} (18 issues), [Dutch](http://productivemag.nl){:target='_blank'} (5 issues), [Spanish](http://productivemag.es){:target='_blank'} (4 issues) and Japanese (1 issue) as a part of my now shut-down [Remag startup](https://remag.me){:target='_blank'}."
 - name: news
   emoj: "💌"
-  titl: "News"
-  tit2: "Join my inner circle and as a *thank you* download two of my best-selling books: [It's All About Passion](/passion/) and [No Office Apps](/apps/). Receive regular updates on my writing, especially my progress on the [The No Office book](/nooffice/).\\\\As my newsletter subscriber every month you'll receive 3 things: an actionable productivity tip, an update on my writing with highlights from my [#NoOffice FM podcast](/noofficefm) and the progress report on the [NoOffice book](https://NoOffice.org/){:target='_blank'} and… I might ask you for your feedback! Fill out the form below to join my *inner circle*! See you on the other side!"
+  titl: "Newsletter"
+  tit2: "**Subscribe to my monthly Newsletter!** Join my inner circle and as a *thank you* get two of my best-selling books: [It's All About Passion](/passion/) and [No Office Apps](/apps/). As my newsletter subscriber every month you'll receive 3 things: an actionable productivity tip, an update on my writing with highlights from my [#NoOffice FM podcast](/noofficefm) and the progress report on the [NoOffice book](/nooffice/) and… I might ask you for your feedback! Fill out the form below to join my *inner circle*! See you on the other side!"
 - name: nooffice
   emoj: "🏝"
   titl: "NoOffice"
