--- a/_data/passion.yml
+++ b/_data/passion.yml
@@ -6,9 +6,33 @@ none: "Nothing written yet..."
 url: passion
 toc:
 - url: intro
-  status: none # options are: none (no file created), draft (rough draft), ready (just written) and publish (published document)
-  chname: Intro
+  status: publish # options are: none (no file created), draft (rough draft), ready (just written) and publish (published document)
+  chname: Start
   chapters:
-  - url: dream
-    status: none
+  - url: seven
+    status: publish
     chname: Chapter 1
+  - url: money
+    status: publish
+    chname: Chapter 2
+  - url: solution
+    status: publish
+    chname: Chapter 3
+  - url: product
+    status: publish
+    chname: Chapter 4
+  - url: industry
+    status: publish
+    chname: Chapter 5
+  - url: growth
+    status: publish
+    chname: Chapter 6
+  - url: helping
+    status: publish
+    chname: Chapter 7
+  - url: synergies
+    status: publish
+    chname: Chapter 8
+  - url: logout
+    status: publish
+    chname: End
