--- a/_data/passion.yml
+++ b/_data/passion.yml
@@ -1,4 +1,5 @@
 title: "Book: It's All About Passion"
+subtitle: "The 7 types of passions I discovered when running my startup Nozbe."
 back: Back to the Table of Contents
 continue: "Next:"
 draft: "[Draft]"
