--- a/_data/main.yml
+++ b/_data/main.yml
@@ -9,12 +9,16 @@ title_pl: "Michael.team/pl Michała Śliwińskiego"
 title_es: "Michael.team/es de Michael Sliwinski"
 
 titleshort: "by Michael Sliwinski"
-titleshort_pl: "wpis Michała Śliwińskiego"
+titleshort_pl: "Michał Śliwiński"
 titleshort_es: "de Michael Sliwinski"
 
 locale: en_EN
 locale_pl: pl_PL
 locale_es: es_ES
+
+book: Book
+book_pl: "Książka"
+book_es: "Libro"
 
 share: "Copy & share"
 share_pl: "Prześlij dalej"
