--- a/_data/passion.yml
+++ b/_data/passion.yml
@@ -1,11 +1,42 @@
-title: "Book: It's All About Passion"
-subtitle: "How 7 types of passion helped me achieve success with my productivity startup Nozbe."
+title: "It's All About Passion"
+subtitle: "How 7 types of passion helped me achieve success with my productivity startup Nozbe"
 back: Back to the Table of Contents
 continue: "Next:"
 draft: "[Draft]"
 none: "Nothing written yet..."
 url: passion
 toc:
+- url: intro #the same url must be used in the following documents as "part" part:intro
+  status: publish # options are: none (no file created), draft (rough draft), ready (just written) and publish (published document)
+  chname: Start
+- url: seven
+  status: publish
+  chname: Chapter 1
+- url: money
+  status: publish
+  chname: Chapter 2
+- url: solution
+  status: publish
+  chname: Chapter 3
+- url: product
+  status: publish
+  chname: Chapter 4
+- url: industry
+  status: publish
+  chname: Chapter 5
+- url: growth
+  status: publish
+  chname: Chapter 6
+- url: helping
+  status: publish
+  chname: Chapter 7
+- url: synergies
+  status: publish
+  chname: Chapter 8
+- url: logout
+  status: publish
+  chname: End
+boc:
 - url: intro #the same url must be used in the following documents as "part" part:intro
   status: publish # options are: none (no file created), draft (rough draft), ready (just written) and publish (published document)
   chname: Start
