--- a/_data/main.yml
+++ b/_data/main.yml
@@ -41,7 +41,7 @@ ad: "false" #"true" so it displays, everything else to not show it, like "false"
 ad_link: "https://nozbe.com/promo/?c=michaelteam"
 ad_text: "💥BLACK FRIDAY! Get Nozbe - up to 4 MONTHS FREE!🔥"
 
-descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), [founder](/business/) of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [teams](/vlog/). [I write](/archive/) on [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/) and [I believe](/contact) that *work is not a place you go to, it's a thing you do.*"
+descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [teams](/vlog/). [I write here](/archive/) on [business](/business/) and [life](/life/) using [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/), as [I believe](/contact) that *work is not a place you go to, it's a thing you do.*"
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://michael.gratis/nozbe_pl){:target='_blank'} - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum/) piszę o [produktywności](/pl/imagazine/). [Wierzę](/pl/kontakt/), że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
 descr_es: "Hola, soy Michael Sliwinski, fundador de [Nozbe](https://michael.gratis/nozbe_es){:target='_blank'} - gestor de tareas para modernos equipos. [Escribo](/es/todo/) sobre [productividad](/es/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
