--- a/_data/main.yml
+++ b/_data/main.yml
@@ -41,7 +41,7 @@ ad: "false" #"true" so it displays, everything else to not show it, like "false"
 ad_link: "https://nozbe.com/promo/?c=michaelteam"
 ad_text: "💥BLACK FRIDAY! Get Nozbe - up to 4 MONTHS FREE!🔥"
 
-descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [teams](/vlog/). [I write here](/archive/) on [business](/business/) and [life](/life/) using [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/), as [I believe](/contact) that *work is not a place you go to, it's a thing you do.*"
+descr: "[Hello](/now/), I'm [Michael Sliwinski](/about/), founder of [Nozbe](/nozbe/) - [to-do](/productivity/) app for [teams](/vlog/). I [write essays](/archive/), [books](/books/) and I [podcast](/noofficefm/) for you using [#iPadOnly](/ipadonly/) in [#NoOffice](/nooffice/) as I [believe](/contact) that *work is not a place you go to, it's a thing you do.*"
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://michael.gratis/nozbe_pl){:target='_blank'} - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum/) piszę o [produktywności](/pl/imagazine/). [Wierzę](/pl/kontakt/), że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
 descr_es: "Hola, soy Michael Sliwinski, fundador de [Nozbe](https://michael.gratis/nozbe_es){:target='_blank'} - gestor de tareas para modernos equipos. [Escribo](/es/todo/) sobre [productividad](/es/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
@@ -92,7 +92,7 @@ tags:
 - name: books
   emoj: "📖"
   titl: "Books"
-  tit2: "Books I'm reading and recommending as well as books I'm writing. Featuring the behind-the-scenes process of writng the [#NoOffice book](https://NoOffice.org/){:target='_blank'}."
+  tit2: "Books I'm reading and recommending as well as books I'm writing. Featuring the behind-the-scenes process of writing my main project currently, the **[#NoOffice book](https://NoOffice.org/){:target='_blank'}**. You can also get my past books: [It's All About Passion!](/passion/) and [NoOffice Apps](/apps/) when you subscribe to my [newsletter](/news/)."
 - name: business
   emoj: "💼"
   titl: "Business"
