Drawings tag and 2013 import started nov and dec

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -101,6 +101,10 @@ tags:
   emoj: "💻"
   titl: "Computers"
   tit2: "Computing platforms and all the types of computers I used to use like Macs, Windows machines… together with geeky gadgets I happen to test and buy. I also write more specifically on [iPads](/ipadonly), [iPhones](/iphone) and [Apple Watches](/applewatch)."
+- name: draw
+  emoj: "✏️"
+  titl: "Drawings"
+  tit2: "Sometimes instead of putting a photo as a representation of a blog post or essay, I draw, doodle or sketch on my [iPad](/ipadonly/). Here's the list of all the posts that contain such drawings. Please don't judge me. Drawing gives me joy and it's all that matters."
 - name: guest
   emoj: "🤩"
   titl: "Guest appearances"
